Version updates, new GraalVM build image and CRT lib with included libs